--- a/estilo.css
+++ b/estilo.css
@@ -1,35 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&display=swap');
+
 html, body{
-    margin: 0%;
-    border: 0%;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background: #9c9c9c;
+    margin:0;
+    border:0;
+    padding:0;
+    width:100%;
+    height:100%;
+    background-color: #9c9c9c;
+    font-family: 'Lato', sans-serif;
 }
 
-.wrapper
-{
-    margin: 0 auto;
-    background: blueviolet;
-    width: 100%;
-    max-width: 1200px;
-    height: auto;
+.wrapper{
+    margin:0 auto;
+    background: rgb(255, 255, 255);
+    width:100%;
+    max-width:1200px;
+    height:auto;
 }
 
 header{
     display: grid;
-    grid-template-columns: 1fr 5fr;
-
+    grid-template-columns: 250px 5fr;
 }
 
 .menu-apoio{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, auto);
+    gap: 10px;
+    align-content: center;
+    justify-content: center;
+    width: auto;
+    height: auto;
+
+}
+
+.item-menu-apoio{
+    background: red;
+    width: auto;
+    height: auto;
+    padding: 10px 40px 10px 40px;
+    cursor: pointer;
+    border-radius: 15px;
+    font-weight: 900;
+}
+
+.item-menu-apoio:hover{
+    background: black;
+    color: white;
 }
 
 .conteudo{
-    display: grid;
-    grid-template-columns:1fr 5fr ;
+    display:grid;
+    grid-template-columns: 250px 5fr;
 }
 
 nav{
@@ -41,8 +63,13 @@ footer{
     display: grid;
     grid-template-columns: 1fr;
 }
+
 .resp{
-    width: 100%;
-    max-width: 100%;
-    height: auto;
+    width:100%;
+    max-width:100%;
+    height:auto;
+}
+
+.logo{
+    padding: 20px;
 }
