--- a/estilo.css
+++ b/estilo.css
@@ -42,6 +42,7 @@ header{
     cursor: pointer;
     border-radius: 15px;
     font-weight: 900;
+    text-transform: uppercase;
 }
 
 .item-menu-apoio:hover{
@@ -56,7 +57,31 @@ header{
 
 nav{
     display: grid;
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: repeat(7, auto);
+    gap: 10px;
+    padding: 10px;
+    overflow-x: hidden;
+    transition: 0.5s;
+    width: 120px;
+    cursor: pointer;
+    align-content: flex-start;
+}
+
+nav:hover{
+    width: 220px;
+}
+
+.menu{
+    background: red;
+    padding: 10px;
+    text-transform: uppercase;
+    border-radius: 15px;
+    align-content: flex-start;
+}
+
+.menu:hover{
+    background: black;
+    color: white;
 }
 
 footer{
@@ -72,4 +97,10 @@ footer{
 
 .logo{
     padding: 20px;
+}
+
+main{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto auto;
 }
